clusters/talos-robbinsdale/apps/media/app/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostname: jellyfin-robbinsdale
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:preview
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /media/tvshows
            - name: movies-volume
              mountPath: /media/movies
            - name: music-volume
              mountPath: /media/music
            - name: audiobooks-volume
              mountPath: /media/audiobooks                            
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv-unas
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies-unas
        - name: audiobooks-volume
          persistentVolumeClaim:
            claimName: readarr-books-unas
        - name: music-volume
          persistentVolumeClaim:
            claimName: lidarr-music-unas
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyfin-config-ceph
